package itens;

import personagens.Personagem;

public interface EfeitoDeItem {
    void aplicar(Personagem alvo);
}